
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.

MODx Revolution 2.0.3-pl
====================================
- [#MODX-2361] Ensure that a user in the Administrator group *always* has access to a Context when it is restricted in another user group
- [#MODX-2357] Fixed bug that occurs when hiding a tab with FC rule that is the default active tab
- [#MODX-2358] Fixed rare bug occurring with treestate in Chrome due to undefined variables in path
- Fixed various issues with package management and the add new package button
- Fixed bug where ?v=203pl is being added to content with .js in it, due to earlier commit to prevent js caching
- Fixed issues with ellipsis/limit filters and special chars
- [#MODX-2353] Fixed bugs with checkbox/radio TVs and complex values with HTML/quotes in them
- Fixed some bugs with deleting a file in MODx.Browser in the actual view pane
- [#MODX-2354] Fixed issue with imageTV and incorrect preview url reference
- Fixed ellipsis output filter to use &#8230; instead of ...
- [#MODX-2327] Fixed bugs with Form Customization not being respected
- [#MODX-2349] Fixed bug with Form Customization and fieldDefault rule with template field
- Added code to prevent caching of JS after upgrades by postfixing version to JS URLs
- [#MODX-2342] Fixed issue where xhtml_urls setting wasnt included in build
- [#MODX-2345] Fixed issue with templates and categories in mgr not persisting
- [#MODX-2341] Fixed issue with redirect statement on login page in certain environments
- [#MODX-2343] File upload now respects upload_* extension restrictions
- [#MODX-2344] Respect context-specific filemanager_path in upload/remove actions on directory tree in mgr

MODx Revolution 2.0.2-pl (September 17, 2010)
====================================
- [#MODX-2339] Fixed issue with caching menus in mgr and multiple languages